# Log-Cruncher

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
benchmarks/: timer.cpp  timer.hpp
data/: generate_advanced_logs.py  generate_speed.py  preparation.txt
include/: Analyzer.hpp  MMapLoader.hpp
src/: Analyzer.cpp  MMapLoader.cpp  main.cpp
